# MicroGradCpp

./: .gitignore  CMakeLists.txt  main.cpp  misc.h  nn.h  stdafx.cpp  stdafx.h  value.h
tests/: ptnn.h  test_value.cpp
